package edu.fiuba.algo3.comodines;

public interface Aleatoriedad {
    boolean seAplica();
}
